feat: add grouped market answer additions
